added output thingspeak. 1 Channel only, 8 fields max.

--- a/outputs.cfg
+++ b/outputs.cfg
@@ -4,6 +4,21 @@ enabled=on
 
 [Xively]
 filename=xively
+enabled=off
+APIKey=YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
+FeedID=XXXXXXXXXX
+
+[Thingspeak]
+filename=thingspeak
 enabled=on
 APIKey=YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
 FeedID=XXXXXXXXXX
+
+[MongoDB]
+filename=mongodb
+enabled=off
+host=
+port=
+database=
+username=
+password=
