added mongodb output support.

--- a/outputs.cfg
+++ b/outputs.cfg
@@ -13,12 +13,12 @@ filename=thingspeak
 enabled=on
 APIKey=YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
 FeedID=XXXXXXXXXX
+# Rate limit = 15!
 
 [MongoDB]
 filename=mongodb
-enabled=off
-host=
-port=
-database=
-username=
-password=
+enabled=on
+host=x.x.x.x
+port=27017
+database=airpies
+collection=sensors
